# PicoIdeal-main

./: README.md
cloud/: picoideal.sql  pom.xml
cloud-ui/: README.md  package-lock.json  package.json  vue.config.js
cloud-ui/public/: index.html
cloud-ui/src/: App.vue  main.js
cloud-ui/src/api/: data.js  device.js  login.js  property.js  protocol.js  user.js
cloud-ui/src/router/: index.js
cloud-ui/src/utils/: picoIdeal.js  request.js
cloud-ui/src/views/: index.vue  layout.vue  login.vue  register.vue
framework/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
framework/components/lvgl_ui/: CMakeLists.txt
framework/components/lvgl_ui/include/anim/: anim.h
framework/components/lvgl_ui/include/app/: app.h
framework/components/lvgl_ui/include/page/: about.h  home.h  index.h
framework/components/lvgl_ui/src/anim/: anim.c
framework/components/lvgl_ui/src/app/: app.c
framework/components/lvgl_ui/src/img/: ui_img_1_png.c  ui_img_2_png.c  ui_img_3_png.c  ui_img_4_png.c  ui_img_5_png.c  ui_img_6_png.c  ui_img_7_png.c  ui_img_8_png.c  ui_img_about_png.c  ui_img_batteryempty_png.c  ui_img_batteryfull_png.c  ui_img_batteryhalf_png.c  ui_img_batteryquarter_png.c  ui_img_batterythreequarters_png.c  ui_img_hemperature_png.c  ui_img_home_png.c  ui_img_humidity_png.c  ui_img_left_png.c  ui_img_logo_png.c  ui_img_right_png.c  ui_img_wifi_png.c
framework/components/lvgl_ui/src/page/: about.c  home.c  index.c
framework/components/tcp/: CMakeLists.txt  (+1 more)
framework/main/: CMakeLists.txt  main.c
hardware/: PCB_PicoIdeal_2022-06-06.json  SCH_Sheet1_2022-06-06.json
(+111 files in other folders)
